# test_dioxus_hook

./: Cargo.toml
src/: home.rs  main.rs  router.rs
