[package]
name = "test_dioxus_hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "fix-router-query" }
dioxus-logger = "0.4.1"
dioxus-router = { git = "https://github.com/DioxusLabs/dioxus", branch = "fix-router-query", features = [
    "web",
] }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", branch = "fix-router-query" }
gloo-storage = "0.3.0"
log = "0.4.20"
serde = "1.0.188"
uuid = { version = "1.4.1", features = ["v4", "serde", "js"] }
